# id-crm-ticketing

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md
agent/: Dockerfile  pyproject.toml
agent/app/: config.py  main.py  security.py
agent/app/ai/: gemini.py  tools.py
agent/app/clients/: chatwoot.py  deps.py  proton.py  zammad.py
agent/app/db/: models.py  session.py
agent/app/routers/: chatwoot.py  health.py  zammad.py
agent/app/services/: business_hours.py  categorize.py  dedupe.py  lifecycle.py  lifecycle_scanner.py  lifecycle_store.py  orchestrator.py  responder.py  sync.py
agent/scripts/: register_bot.py
agent/tests/: conftest.py  test_business_hours.py  test_categorize.py  test_categorize_wiring.py  test_chatwoot_bot_router.py  test_chatwoot_client_labels.py  test_chatwoot_client_lifecycle.py  test_chatwoot_router.py  test_chatwoot_router_lifecycle.py  test_client_lifecycle.py  test_dedupe.py  test_email_autoack.py  test_gemini.py  test_health.py  test_lifecycle_config.py  test_lifecycle_disclaimer.py  test_lifecycle_lifespan.py  test_lifecycle_replies.py  test_lifecycle_scanner.py  test_lifecycle_store.py  test_orchestrator.py  test_orchestrator_lifecycle.py  test_orchestrator_proton.py  test_proton_client.py  test_register_bot.py  test_responder.py  test_security.py  test_sop_config.py  test_sync_contacts.py  test_sync_escalation.py  test_sync_ticket_events.py  test_zammad_router.py
apps/backend/: .env.example  .gcloudignore  pyproject.toml  run_assist_local.py  run_copilot_local.sh
apps/backend/scripts/: backfill_sunshine_user.py  import_mock_users.py  provision_zendesk_email_webhook.py  scrape_proton.py  seed_demo_metrics.py  smoke_chatwoot_zammad.py  sync_chatwoot_metrics.py  sync_zendesk_metrics.py
apps/backend/src/chatbot/: main.py  test_tasks_wiring.py
apps/backend/src/chatbot/platform/: config.py  logger.py  server.py  test_config_bigquery.py  test_config_copilot.py  test_config_metrics.py  (+2 more)
apps/backend/src/scraper/: classifier.py  config.py  html_utils.py  indexer.py  main.py  pdf.py  pipeline.py  sitemap.py  transport.py
(+564 files in other folders)
