[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatbot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "structlog>=24.4",
  "google-adk>=0.3",
  "google-genai>=0.1.1",
  "httpx>=0.27",
  "google-cloud-texttospeech>=2.25.0",
  "python-multipart>=0.0.9",
  "beautifulsoup4>=4.15.0",
  "google-cloud-discoveryengine>=0.20.0",
  "google-cloud-firestore>=2.21.0",
  "google-cloud-storage>=3.12.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET", "ARG", "PL", "RUF", "ASYNC", "S", "C4"]
ignore = ["PLR0913", "E501"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101", "PLR2004", "ARG002", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["google.adk.*", "google.cloud.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src"]
pythonpath = ["src"]
